fix(ui): improve vertical alignment of icons with text in the overflow menu
Turns out the change in `da8aa014` worsened the positioning of icons in tabs,
like the "Conversation"/"Commits"/"Files changed" tab component.

So limit this change to the `overflow-menu`.

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -382,7 +382,6 @@ a.label,
 }
 
 .ui.menu .item > .svg {
-  align-self: baseline;
   margin-right: 0.35em;
 }
 
@@ -1058,6 +1057,10 @@ overflow-menu .overflow-menu-items {
 
 overflow-menu .overflow-menu-items .item {
   margin-bottom: 0 !important; /* reset fomantic's margin, because the active menu has special bottom border */
+}
+
+overflow-menu .overflow-menu-items .item > .svg {
+  align-self: baseline;
 }
 
 overflow-menu .ui.label {
